[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Props/DialoguePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/DialogueWriter/DialogueWriter.gd" type="Script" id=2]

[sub_resource type="InputEventKey" id=1]
scancode = 83

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
shift = true
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 390.0
text = "To je primer dialoga!
:A res?

Ja, res.
{
	::Kako ti je ime?
	Hmmm.
	
	
	/talking_to Janez
	Janez. Zakaj?
	:Ker ti do zdaj to ni pisalo.
	
	::Kako si kaj?
	V redu, pa ti?
	{
		::Fucking terrible, thanks for asking.
		
		::Sem ze bil bolje.
		
		::Odlicno!
	}
}"
highlight_current_line = true
show_line_numbers = true
draw_tabs = true
bookmark_gutter = true
fold_gutter = true
wrap_enabled = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1064.0
margin_top = 25.0
margin_right = 1250.0
margin_bottom = 271.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 3.0
margin_right = 186.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Upravljate z:"

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 186.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "neshranjenim dialogom"

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 186.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 2 )
text = "Shrani"

[node name="Save as" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 186.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 4 )
text = "Shrani kot"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 149.0
margin_right = 186.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Odpri"

[node name="Compile" type="Button" parent="VBoxContainer"]
margin_top = 187.0
margin_right = 186.0
margin_bottom = 208.0
hint_tooltip = "dialog se lahko le prevede, če je ta shranjen"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Prevedi"

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 186.0
margin_bottom = 246.0
hint_tooltip = "dialog se lahko igra, le če je ta preveden"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Igraj"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_right = 2.0
margin_bottom = 4.0
popup_exclusive = true
dialog_hide_on_ok = true
dialog_autowrap = true
access = 2
filters = PoolStringArray( "*.txt" )
current_dir = "/Users/tibor/Documents/GitHub/Forgettable"
current_path = "/Users/tibor/Documents/GitHub/Forgettable/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" parent="." instance=ExtResource( 1 )]
one_time = false

[connection signal="pressed" from="VBoxContainer/Save" to="." method="save"]
[connection signal="pressed" from="VBoxContainer/Save as" to="." method="save_as"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="open"]
[connection signal="pressed" from="VBoxContainer/Compile" to="." method="compile"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="play"]
[connection signal="file_selected" from="FileDialog" to="." method="file_chosen"]
